--- a/public/css/form.css
+++ b/public/css/form.css
@@ -99,3 +99,15 @@
     cursor: pointer;
     text-decoration: underline;
 }
+
+.password-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.password-container .form-input {
+    flex-grow: 1;
+    margin-right: 5px;
+}
