feat(TN22-checkout): create order of part CRUD order

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -206,7 +206,10 @@
   }
 
 }
-
+.active-menu {
+  border-bottom: 2px solid #ED4D2D;
+  color: #ED4D2D;
+}
 /* ===================BANNER==================== */
 #banner {
     display: flex;
