--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -1,44 +1,12 @@
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-}
-
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-  }  
- 
-  .tab button:hover {
-    background-color: #ddd;
-  }
-
-  .tab button.active {
-    background-image: linear-gradient(#9FCBF4, #EAD8FC) ;
-  }
-
-  .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
- 
-/* ---------------------------------------------------Imge profile----------------------------------------------------------- */
 #profile-user{
   font-size: 18px;
 }
 .main-profile{
-  width: 13em;
-  height: 70%;
+  width: 15em;
+  height: 75%;
   border: 1px solid #AAA7A7;
   border-radius: 20px;
-  margin-left: 16%;
+  margin-left: 14%;
   padding: 10px;
 }
 #output{
@@ -57,7 +25,7 @@
 }
 .card-profile
 .form-group{
-  margin-bottom: 10px;
+  margin-bottom: 14px;
 }
 .card-profile
 .form-control{
@@ -101,38 +69,41 @@
 .card-profile form {
   border-radius: 20px;
 }
+.orther-page{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-/* table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    text-align: center;
-   
-  } */
-  .tabcontent {
-    animation: fadeEffect 1s;
-  }
- 
+}
 
-  @keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
 
-  .tabcontent th {
-    height: 50px;
-  }
-  #order .thead-table-purchase{
-    background-image: linear-gradient(#9FCBF4, #EAD8FC) ;
-  }
+.my-links{
+  text-align: center;
+  margin: 10px;
+  border: 1px solid #ccc;
+  max-width: 400px;
+}
+#profile{
+    margin-top: 20px;
+}
+.my-links a {
+  text-decoration: none;
+}
 
+/* Responsive styles */
+@media (max-width: 600px) {
+  .my-links  {
+    max-width: 100%;
+  }
+}
 @media only screen and(width:375px){
-  
+
   #image-profile{
     margin-right: 10%;
     height: 100%;
   }
   .main-profile{
     margin-left: auto;
-  }
-
-}
+  }}
