--- a/public/css/product-detail.css
+++ b/public/css/product-detail.css
@@ -77,7 +77,7 @@ body {
     margin-top: 60px;
 }
 /* -------------------------Button ------------------------------------------------- */
-.card-product-recommend .btn-add-to-card +.btn-add-to-card{
+/* .card-product-recommend .btn-add-to-card +.btn-add-to-card{
     border-radius: 20px;
     border: 1px solid #cbc4c4;
     height: 55px;
@@ -111,7 +111,7 @@ body {
 .card-product-recommend .btn-buy-now:hover {
     background-image: linear-gradient(#9FCBF4, #EAD8FC);
     color: black;
-} 
+}  */
 /* ------------------------------Rating------------------------------------------- */
 
 .rate {
