--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -69,7 +69,7 @@
 .card-profile form {
   border-radius: 20px;
 }
-
+/* 
 .orther-page{
   margin: 0;
   padding: 0;
@@ -77,7 +77,7 @@
   justify-content: center;
   align-items: center;
 
-}
+} */
 
 
 .my-links{
