feature(TN9-crud-order):

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -12,6 +12,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: EB Garamond;
+    font-size: 18px;
   }
   
   /* ---------------- header ------------------ */
