--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,77 +1,180 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
+*
+{
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-.text-striked {
+
+body
+{
+    font-family: 'Roboto', sans-serif;
+}
+a
+{
     text-decoration: none;
+}
+#product-page{
+    display: flex;
 }
 .product-card {
-    box-shadow: 0 12px 17px rgba(129, 140, 151, 0.3);
-    width: 300px;
-    height: 530px;
-    border-radius: 20px;
-    font-size: 18px;
-    
-}
-
-.product-card .product-image {
-    height: 300px;
-    /* position: relative; */
-    /* border-radius: 20px; */
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-}
-
-.product-card .product-image .product-thumbnail {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-} 
-
-.product-card .product-details {
+    width: 340px;
     position: relative;
+    box-shadow: 0 2px 7px #dfdfdf;
+    margin: 20px;
+    background: #fafafa;
+}
+.product-card {
+    transition: transform 0.4s ease;
+    text-align: center; 
+}
+.product-card{
+    border-radius: 20px;
+}
+.product-card:hover {
+    transform: translateY(-10px);
 }
 
-.product-card .product-details a {
-    text-decoration: none;
-    color: #0062cc;
-}
-
-.text-truncate--2 {
+/* .badge {
+    position: absolute;
+    left: 0;
+    top: 20px;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 700;
+    background: red;
+    color: #fff;
+    padding: 3px 10px;
+} */
+.text-truncate--2{
     display: -webkit-box !important;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     white-space: normal;
     overflow: hidden;
+    font-size: 20px;
+}
+.product-tumb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden; 
+    height: auto;
+    background: #f0f0f0;
 }
 
-.rating-stars {
-    display: inline-block;
-    position: relative;
-    width: 90px;
+.product-tumb img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
 }
 
-.rating-stars:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: #eee;
+.product-details {
+    padding: 15px;
 }
 
-.rating-stars .filled-star {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: #ffc107;
-}
-
-.rating-stars img {
-    height: 100%;
-    width: 100%;
+.product-catagory {
     display: block;
-    position: relative;
-    z-index: 1;
-} 
+    font-size: 12px;
+    font-weight: 350;
+    text-transform: uppercase;
+    color: #ccc;
+    margin-bottom: 8px;
+}
+
+.product-details h4 a {
+    font-weight: 400;
+    display: block;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    color: #363636;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.product-details h4 a:hover {
+    color: #fbb72c;
+}
+
+.product-details p {
+    font-size: 15px;
+    line-height: 15px;
+    margin-bottom: 15px;
+    color: #999;
+}
+
+.product-bottom-details {
+    overflow: hidden;
+    border-top: 1px solid #eee;
+    padding-top: 15px;
+}
+
+.product-bottom-details div {
+    float: left;
+    width: 50%;
+}
+
+.product-price {
+    font-size: 16px;
+    color: #fbb72c;
+    font-weight: 500;
+}
+
+.product-price small {
+    font-size: 50%;
+    font-weight: 500;
+    /* text-decoration: line-through; */
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.product-links {
+    text-align: right;
+}
+
+.product-links a {
+    display: inline-block;
+    margin-left: 5px;
+    color: #e1e1e1;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+.product-links a:hover {
+    color: #fbb72c;
+}
+
+
+.loading-page-wrapper {
+    display: table;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
+  .loading-page {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+  }
+  .spinner {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border: 8px solid #007CB7;
+    border-right-color: transparent;
+    border-radius: 50%;
+    animation: rotate-spinner  .5s  infinite linear;
+  }
+
+  @keyframes rotate-spinner {
+    from {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
