--- a/public/css/checkout-page.css
+++ b/public/css/checkout-page.css
@@ -9,7 +9,7 @@
     border-radius: 20px;
     margin-left: 12%;
     border: 1px solid #D8BEBE;   
-    background: #F4FAFD;
+    /* background: #F4FAFD; */
 }
 #checkout-infor-user form {
     margin-top: 15px;
@@ -18,9 +18,12 @@
 
 #checkout-infor-order{
     width: 35% ;
-    height: 30rem;
+    height: auto;
     border-radius: 20px;
-    border: 1px solid #D8BEBE; 
+    /* border: 1px solid #D8BEBE;  */
+    border-right: 1px solid #D8BEBE; 
+    border-top: 1px solid #D8BEBE;
+    border-left: 1px solid #D8BEBE;
     margin-left: 25px;
 }
 
