--- a/public/css/checkout-page.css
+++ b/public/css/checkout-page.css
@@ -20,10 +20,7 @@
     width: 35% ;
     height: auto;
     border-radius: 20px;
-    /* border: 1px solid #D8BEBE;  */
-    border-right: 1px solid #D8BEBE; 
-    border-top: 1px solid #D8BEBE;
-    border-left: 1px solid #D8BEBE;
+    border: 1px solid #D8BEBE; 
     margin-left: 25px;
 }
 
