--- a/public/css/products.css
+++ b/public/css/products.css
@@ -56,7 +56,7 @@ a
     overflow: hidden;
     font-size: 20px;
 }
-.product-tumb {
+/* .product-tumb {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,7 +69,7 @@ a
     max-width: 100%;
     max-height: 100%;
     height: auto;
-}
+} */
 
 .product-details {
     padding: 15px;
